@@ -2,6 +2,7 @@
 
 			     BZFlag release notes
 
+* Server spawn positions - Dave Brosius
 * Added client-side automatic team selection - Alfredo Tupone, Sean Morrison
 * Calc jitter based on client timestamps in MsgPlayerUpdate packets - Frank Thilo
 * Add /reset var server cmd - Dave Brosius
